force-app/main/default/objects/Modelo_do_Veiculo__c/Modelo_do_Veiculo__c.object-meta.xml
<CustomObject>
    <description>Modelos de veículos cadastrados na intranet da Sascar.</description>
    <label>Modelo do Veículo</label>
    <nameField>
        <label>Nome do Modelo do Veículo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modelos de Veículo</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>