force-app/main/default/objects/Modelo_do_Veiculo__c/fields/Codigo_FIPE__c.field-meta.xml
<CustomField>
    <fullName>Codigo_FIPE__c</fullName>
    <description>Código do modelo na tabela FIPE.</description>
    <externalId>true</externalId>
    <inlineHelpText>Código do modelo na tabela FIPE.</inlineHelpText>
    <label>Código FIPE</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>