force-app/main/default/objects/Modelo_do_Veiculo__c/fields/ID_do_modelo__c.field-meta.xml
<CustomField>
    <fullName>ID_do_modelo__c</fullName>
    <description>Identificação do modelo na intranet da Sascar.</description>
    <externalId>true</externalId>
    <inlineHelpText>Identificação do modelo na intranet da Sascar.</inlineHelpText>
    <label>ID do modelo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>