force-app/main/default/objects/Modelo_do_Veiculo__c/fields/ID_SF_marca__c.field-meta.xml
<CustomField>
    <fullName>ID_SF_marca__c</fullName>
    <formula>Marca_Veiculo__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID SF marca</label>
    <type>Text</type>
</CustomField>