force-app/main/default/objects/Modelo_do_Veiculo__c/fields/Marca_Veiculo__c.field-meta.xml
<CustomField>
    <fullName>Marca_Veiculo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Marca do veículo.</description>
    <inlineHelpText>Marca do veículo.</inlineHelpText>
    <label>Marca do Veículo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Marca_Veiculo__c.Ativo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Marca_Veiculo__c</referenceTo>
    <relationshipLabel>Modelos de Veículo</relationshipLabel>
    <relationshipName>Modelos_de_Veiculo</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>