force-app/main/default/objects/Modelo_do_Veiculo__c/fields/Novo__c.field-meta.xml
<CustomField>
    <fullName>Novo__c</fullName>
    <label>Novo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>