force-app/main/default/objects/Modelo_do_Veiculo__c/fields/X1981__c.field-meta.xml
<CustomField>
    <fullName>X1981__c</fullName>
    <label>1981</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>