force-app/main/default/objects/Modelo_do_Veiculo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codigo_FIPE__c</columns>
    <columns>ID_do_modelo__c</columns>
    <columns>Marca_Veiculo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Ativo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>