force-app/main/default/objects/Modelo_do_Veiculo__c/listViews/Ve_culos_Inativos.listView-meta.xml
<ListView>
    <fullName>Ve_culos_Inativos</fullName>
    <columns>Marca_Veiculo__c</columns>
    <columns>NAME</columns>
    <columns>Codigo_FIPE__c</columns>
    <columns>Ativo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ativo__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Veículos - Inativos</label>
</ListView>